[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-top"
version = "0.0.22"
description = "Performance monitoring CLI tool for Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Timothy Liu", email = "tlkh.xms@gmail.com"}
]
keywords = ["fluidtop", "fluid-top", "apple-silicon", "performance", "monitoring", "m1", "m2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "dashing",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/FluidInference/fluidtop"
Repository = "https://github.com/FluidInference/fluidtop"
Issues = "https://github.com/FluidInference/fluidtop/issues"

[project.scripts]
fluidtop = "fluidtop.fluidtop:main"

[tool.setuptools]
packages = ["fluidtop"]

[tool.setuptools.package-data]
fluidtop = ["*.py"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
