[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-top"
version = "0.0.1"
description = "Resource monitoring for Macs with a focus on AI workloads"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Fluid Inference", email = "dev@fluidinference.com" },
]
keywords = ["fluidtop", "fluid-top", "apple-silicon", "performance", "monitoring", "m1", "m2", "m3", "m4", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "textual",
    "textual-plotext",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/FluidInference/fluidtop"
Repository = "https://github.com/FluidInference/fluidtop"
Issues = "https://github.com/FluidInference/fluidtop/issues"

[project.scripts]
fluidtop = "fluidtop.fluidtop:main"

[tool.setuptools]
packages = ["fluidtop"]

[tool.setuptools.package-data]
fluidtop = ["*.py"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
